--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   
   <body>
     <p></p>
-    <img src="VinnyLopez.png" alt="Vinny Lopez">
+    <img src="VinnyLopez.svg" alt="Vinny Lopez">
     
     <hr>
     
